--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
+body {
+    max-width: 100%;
+    overflow-x: hidden;
+  }
+
 #container {
     border: 1px solid black;
     width: max-content;
     margin: 0 auto;
     width: 100%;
-    max-width: 960px;
-    max-height: 960px;
+    max-width: 300px;
+    max-height: 300px;
     height: auto;
     display: block;
 }
